# lance-video

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli-and-ui.md  development.md  pipeline.md  search.md
scripts/: demo.sh  verify_blob.py
src/video_lance/: cli.py  clipper.py  config.py  device.py  discovery.py  embed_text.py  embed_vision.py  frames.py  models.py  pipeline.py  probe.py  rerank.py  schema.py  search.py  segmenter.py  stages.py  store.py  transcribe.py  ui_app.py
tests/: _fakes.py  conftest.py  test_cli.py  test_clipper.py  test_config.py  test_device.py  test_discovery.py  test_embed_text.py  test_embed_vision.py  test_frames.py  test_integration_real_models.py  test_models.py  test_pipeline.py  test_probe.py  test_rerank.py  test_schema.py  test_search.py  test_segmenter.py  test_stages.py  test_store.py  test_transcribe.py  test_ui_app.py
tests/fixtures/: make_fixture.py
ui/: app.py
