[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-lance"
version = "0.1.0"
description = "Video indexing pipeline with LanceDB blob columns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13",
    "faster-whisper>=1.2",
    "Pillow>=12.3",
    "sentence-transformers>=5.6",
    "transformers>=5.13",
    "torch>=2.12.1",
    "numpy>=2.5",
    "sentencepiece>=0.2",
    "lancedb>=0.34",
    "pylance>=8.0",
    "pyarrow>=24.0",
    "gradio>=6.19",
]

[project.scripts]
video-lance = "video_lance.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "pre-commit>=4.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/video_lance"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer's `typer.Argument(...)` / `typer.Option(...)` defaults are the canonical
# CLI pattern and are not a bug — silence B008 for the CLI module only.
"src/video_lance/cli.py" = ["B008"]

[tool.ty.src]
# `ty` is Astral's fast type checker — our single static-type gate. mypy was
# dropped after `ty` reached parity; if anything escapes that mypy would have
# caught, re-add it (10 lines).
include = ["src"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# Only measure our package; the test fakes aren't meant to be covered.
# Branch coverage is on because several pieces
# (segmenter, search fusion, pipeline orchestration) have branches the
# unit tests deliberately exercise.
source = ["src/video_lance"]
branch = true
omit = [
    "src/video_lance/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"
